; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/xps/extr_xps-outline.c_xps_parse_document_structure.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/xps/extr_xps-outline.c_xps_parse_document_structure.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"DocumentStructure\00", align 1
@.str.1 = private unnamed_addr constant [26 x i8] c"DocumentStructure.Outline\00", align 1
@.str.2 = private unnamed_addr constant [16 x i8] c"DocumentOutline\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, i32*)* @xps_parse_document_structure to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @xps_parse_document_structure(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load i32*, i32** %7, align 8
  %10 = call i64 @fz_xml_is_tag(i32* %9, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %37

12:                                               ; preds = %3
  %13 = load i32*, i32** %7, align 8
  %14 = call i32* @fz_xml_down(i32* %13)
  store i32* %14, i32** %8, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %36

17:                                               ; preds = %12
  %18 = load i32*, i32** %8, align 8
  %19 = call i64 @fz_xml_is_tag(i32* %18, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0))
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %36

21:                                               ; preds = %17
  %22 = load i32*, i32** %8, align 8
  %23 = call i32* @fz_xml_down(i32* %22)
  store i32* %23, i32** %8, align 8
  %24 = load i32*, i32** %8, align 8
  %25 = icmp ne i32* %24, null
  br i1 %25, label %26, label %35

26:                                               ; preds = %21
  %27 = load i32*, i32** %8, align 8
  %28 = call i64 @fz_xml_is_tag(i32* %27, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0))
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %35

30:                                               ; preds = %26
  %31 = load i32*, i32** %5, align 8
  %32 = load i32*, i32** %6, align 8
  %33 = load i32*, i32** %8, align 8
  %34 = call i32* @xps_parse_document_outline(i32* %31, i32* %32, i32* %33)
  store i32* %34, i32** %4, align 8
  br label %38

35:                                               ; preds = %26, %21
  br label %36

36:                                               ; preds = %35, %17, %12
  br label %37

37:                                               ; preds = %36, %3
  store i32* null, i32** %4, align 8
  br label %38

38:                                               ; preds = %37, %30
  %39 = load i32*, i32** %4, align 8
  ret i32* %39
}

declare dso_local i64 @fz_xml_is_tag(i32*, i8*) #1

declare dso_local i32* @fz_xml_down(i32*) #1

declare dso_local i32* @xps_parse_document_outline(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
